Changelog
=========

0.3 - (Unreleased)
------------------

 * Fixed content overflow in frontpage column areas. [thuliper]
 * Fixed document actions position too high #2792. [thuliper]
 * Fixed bug where promotions on theme pages sometimes took up too little width. [thuliper]

0.2 - (2009-11-10)
------------------

 * print.css added
 * tagline fixes
 * a-z glossary link style

0.1 - (2009-11-10)
------------------

* Initial release
